# movie_reviews

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yml
docker/celery/: Dockerfile
docker/web/: Dockerfile  entrypoint.sh
src/accounts/: authentication.py  models.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py  0002_remove_customuser_id_alter_customuser_email.py  0003_customuser_date_joined_customuser_is_active_and_more.py  0004_token.py  0005_customuser_email_notifications.py  0006_customuser_letterboxd_user.py  0007_alter_customuser_letterboxd_user.py
src/config/: celery.py  feeds.json  settings.py  urls.py
src/functional_tests/: conftest.py  test_reviews.py
src/functional_tests/pages/: home_page.py
src/reviews/: forms.py  models.py  notifications.py  parsers.py  tasks.py  urls.py  views.py
src/reviews/migrations/: 0001_initial.py  0002_review_url.py  0003_review_date.py  0004_review_content.py  0005_alter_author_options_alter_review_options_and_more.py  0006_taskcontrol.py  0007_alter_taskcontrol_is_enabled.py  0008_author_followers.py  0009_alter_review_url.py  0010_remove_review_content.py  0011_parsercontrol.py  0012_letterboxduser_letterboxdentry.py  0013_alter_letterboxdentry_options.py
src/reviews/tests/: conftest.py  test_models.py  test_views.py
src/tests/: conftest.py  data_provider.py  test_data.json  test_models.py  test_views.py
src/tests/accounts/: test_authentication.py  test_models.py  test_views.py
src/tests/fixtures/: test_feed_contains_not_reviews.xml  test_feed_empty.xml  test_feed_indiewire.xml  test_feed_letterboxd.xml  test_feed_older_than_cutoff_year.xml  test_feed_page_1.xml  test_feed_page_2.xml  test_feed_with_duplicates.xml  test_feed_with_old_entries.xml
src/tests/functional/: test_following_authors.py  test_letterboxd.py  test_login.py  test_reviews.py
src/tests/functional_tests/: test_reviews.py
src/tests/reviews/: test_management_commands.py  (+4 more)
src/tools/: parse_rss.py
(+15 files in other folders)
