[project]
name = "movie-reviews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.2"
classifiers = [ "Programming Language :: Python :: 3 :: Only" ]
dependencies = [
  "beautifulsoup4>=4.14.3",
  "django>=6.0.1",
  "feedparser>=6.0.12",
  "pre-commit>=4.5.1",
  "pytest-django>=4.11.1",
  "pytest-playwright>=0.7.2",
  "python-decouple>=3.8",
  "responses>=0.25.8",
]
