[project]
name = "movie-reviews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.2"
classifiers = [ "Programming Language :: Python :: 3 :: Only" ]

dependencies = [
  "aiohttp>=3.13.3",
  "aioresponses>=0.7.8",
  "beautifulsoup4>=4.14.3",
  "celery>=5.6.2",
  "celery-types>=0.26",
  "django>=6.0.1",
  "django-stubs[compatible-mypy]>=5.2.9",
  "feedparser>=6.0.12",
  "gunicorn>=25.3",
  "pre-commit>=4.5.1",
  "psycopg[binary]>=3.3.2",
  "pytest-asyncio>=1.3",
  "pytest-django>=4.11.1",
  "pytest-playwright>=0.7.2",
  "python-decouple>=3.8",
  "responses>=0.25.8",
  "time-machine>=3.2",
  "types-requests>=2.32.4.20260324",
]

[tool.mypy]
plugins = [ "mypy_django_plugin.main" ]
mypy_path = "src"
exclude = [ ".*/tests/.*" ]

[[tool.mypy.overrides]]
module = "feedparser.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "decouple.*"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings"
